IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
12/12/08: In Etomo - Fiducial Model exposed the beadtrack parameter
BeadDiameter.

12/12/08: Fixed Tilt for reconstructions from data with angles to and above
90 degrees; made Tiltxcorr give error if cosine stretching is enabled and 
angles are too high for it to be valid.

12/11/08: Added output from the Tiltalign surface analysis of the unbinned
thickness needed to contain gold centers and shift needed to center the range
of gold in Z.

12/11/08: Fixed copytomocoms output for blending coordinates when there is 
a 90-degree rotation.

12/11/08: Fixed model view update when running from 3dmod and there are no 
image windows, as when editing patch vectors.

12/11/08: In Etomo - Join, popping up Warnings from xfjointomo.

12/10/08: Added findbeads3d for automatically finding gold beads in a tomogram.

12/10/08: In Etomo - Join, fixed a bug where the Alignment Reference Section
was always saved under trial, even when a finish join was done.  Will fix
previous .ejf files only in the case where the trial join was never run.

12/10/08: In Etomo - Join, fixed the format problem affecting spinners in the
Join tab.

12/10/08: Made Transferfid work if the fiducial model was last loaded on a
stack with different binning from the current stacks.

12/10/08: Changed Repackseed and Solvematch so that matching coordinates from
Transferfid would still work if either fiducial model was last loaded at a
different binning from when Transferfid was run.

12/10/08: Fixed bug in Remapmodel when entering shifts with -add option.

12/10/08: Improved the Etomo log file to include time stamp and data set
information.

12/9/08: IMOD_3-12-24
12/9/08: Fixed bug in reading ascii models written with reference info.

12/9/08: Made imodmesh turn mesh drawing on when meshing and off when erasing.

12/9/08: Added hot key k for copying contour when contour copy dialog is open.
